k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rooman-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rooman-app
  template:
    metadata:
      labels:
        app: rooman-app
    spec:
      containers:
        - name: rooman-container
          image: us.icr.io/rooman/rooman-app:latest
          ports:
            - containerPort: 5000
