k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rooman-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 5000
  selector:
    app: rooman-app
